chore(toc): add about/execution docs(controlnet): add references\n

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -157,3 +157,4 @@ parts:
       - url: https://research.entelecheia.ai
         title: research.entelecheia.ai
       - file: about/index
+      - file: about/execution
