--- a/book/_config.yml
+++ b/book/_config.yml
@@ -8,6 +8,12 @@
 title: "ἐντελέχεια.άι" # The title of the book. Will be placed in the left navbar.
 author: <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 copyright: "2023"
+# Patterns to skip when building the book. Can be glob-style (e.g. "*skip.ipynb")
+exclude_patterns:
+  [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints", "*draft.ipynb"]
+# Auto-exclude files not in the toc
+only_build_toc_files: true
+
 # logo: logo-entelecheia.png # A path to the book logo
 
 # Force re-execution of notebooks on each build.
@@ -17,6 +23,24 @@ execute:
   exclude_patterns:
     - "*.ipynb"
   allow_errors: true
+
+#######################################################################################
+# Parse and render settings
+parse:
+  myst_enable_extensions: # default extensions to enable in the myst parser. See https://myst-parser.readthedocs.io/en/latest/using/syntax-optional.html
+    - amsmath
+    - colon_fence
+    # - deflist
+    - dollarmath
+    # - html_admonition
+    # - html_image
+    - linkify
+    - replacements
+    - smartquotes
+    - substitution
+    - tasklist
+  myst_url_schemes: [mailto, http, https] # URI schemes that will be recognised as external URLs in Markdown links
+  myst_dmath_double_inline: true # Allow display math ($$) within an inline context
 
 # Define the name of the latex output file for PDF builds
 latex:
