docs: add lab-eda for deep nlp

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -52,6 +52,7 @@ parts:
           - file: lectures/nlp_deep/datasets/index
             sections:
               - file: lectures/nlp_deep/datasets/mc4
+              - file: lectures/nlp_deep/datasets/lab-eda
               # - file: lectures/nlp_deep/datasets/lab-corpus
           - file: lectures/nlp_deep/tokenization/index
             sections:
@@ -157,4 +158,4 @@ parts:
       - url: https://research.entelecheia.ai
         title: research.entelecheia.ai
       - file: about/index
-      - file: about/execution
+      # - file: about/execution
