refactor: sentiment analysis

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -24,6 +24,8 @@ parts:
               - file: lectures/nlp_intro/topic/coherence-practice.md
               - file: lectures/nlp_intro/topic/tomotopy
           - file: lectures/nlp_intro/sentiments/index
+            sections:
+              - file: lectures/nlp_intro/sentiments/lexicon
           - file: lectures/nlp_intro/tokenization/index
             sections:
               - file: lectures/nlp_intro/tokenization/segmentation
