docs(nlp): add machine learning section to sentiments lecture

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -26,6 +26,7 @@ parts:
           - file: lectures/nlp_intro/sentiments/index
             sections:
               - file: lectures/nlp_intro/sentiments/lexicon
+              - file: lectures/nlp_intro/sentiments/ml
           - file: lectures/nlp_intro/tokenization/index
             sections:
               - file: lectures/nlp_intro/tokenization/segmentation
