--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -27,6 +27,7 @@ parts:
             sections:
               - file: lectures/nlp_intro/sentiments/lexicon
               - file: lectures/nlp_intro/sentiments/ml
+              - file: lectures/nlp_intro/sentiments/lab-lexicon
           - file: lectures/nlp_intro/tokenization/index
             sections:
               - file: lectures/nlp_intro/tokenization/segmentation
