docs(mlops): add github workflow

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -140,6 +140,7 @@ parts:
           - file: lectures/mlops/github/index
             sections:
               # - file: lectures/mlops/github/github-actions
+              - file: lectures/mlops/github/fork-pull
               - file: lectures/mlops/github/template
               - url: https://hyperfast-python.entelecheia.ai/
                 title: Hyperfast Python Template
