fix: apply updated template

--- a/.github/workflows/prerelease-to-test-pypi.yaml
+++ b/.github/workflows/prerelease-to-test-pypi.yaml
@@ -1,19 +1,9 @@
 ---
-name: semantic-prerelease
+name: semantic-prerelease-to-test-pypi
 
 on:
   workflow_call:
   workflow_dispatch:
-  push:
-    branches:
-      - pre*
-      - beta*
-      - alpha*
-      - rc*
-      - nigtly*
-    paths:
-      - 'src/**'
-      - 'pyproject.toml'
 
 permissions:
   contents: write
@@ -44,10 +34,13 @@ jobs:
         run: echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       # semantic release
-      - name: Python Semantic Release to PyPI
+      - name: Python Semantic Release to Test PyPI
         uses: relekang/python-semantic-release@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           repository_username: __token__
-          repository_password: ${{ secrets.PYPI_API_TOKEN }}
+          repository_password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           additional_options: --prerelease --verbosity=DEBUG --define=branch=${{ env.BRANCH }}
+        env:
+          REPOSITORY_URL: https://test.pypi.org/legacy/
+
