--- a/.copier-config.yaml
+++ b/.copier-config.yaml
@@ -1,18 +1,28 @@
 # Changes here will be overwritten by Copier; do NOT edit manually
-_commit: v0.1.7
+_commit: v0.4.14
 _src_path: gh:entelecheia/hyperfast-python-template
 author: Young Joon Lee
+build_and_release: true
+code_template_answers_file: .copier-hyfi-config.yaml
+code_template_source: ''
 copyright_year: 2023
 documentaion_tool: jupyter-book
 documentation_url: https://lecture.entelecheia.ai
 email: entelecheia@hotmail.com
-friendly_name: Artificial Intelligence Courses Lecture Notes
+favicon_path: https://assets.entelecheia.ai/favicon.png
+friendly_name: ἐντελέχεια.άι
 github_repo_name: lecture
 github_username: entelecheia
+google_analytics_id: G-BQJE5V9RK2
+logo_path: ''
 package_name: lecture
-project_description: null
+project_description: Lecture notes for artifical intelligence courses taught at Cheju
+    Halla University
 project_license: CC-BY-4.0
 project_name: lecture
-project_short_description: Lecture notes for artifical intelligence courses taught
-    at Cheju Halla University
+project_short_description: Artificial Intelligence | Lecture Notes
+upload_to_release: false
+upload_to_repository: true
+use_launch_buttons: true
+use_source_code_skeleton: false
 
