--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -1,19 +1,9 @@
 ---
-name: semantic-prerelease
+name: semantic-release-test
 
 on:
   workflow_call:
   workflow_dispatch:
-  push:
-    branches:
-      - pre*
-      - beta*
-      - alpha*
-      - rc*
-      - nigtly*
-    paths:
-      - 'src/**'
-      - 'pyproject.toml'
 
 permissions:
   contents: write
@@ -23,7 +13,7 @@ permissions:
 jobs:
   build:
     # Name the Job
-    name: prerelease
+    name: semantic-release-test
     # Set the agent to run on
     runs-on: ${{ matrix.os }}
     strategy:
@@ -31,7 +21,6 @@ jobs:
         os: [ubuntu-latest]
         python-version: [3.8]
 
-    # Load all steps #
     steps:
       # Checkout the code base #
       - name: Checkout Code
@@ -50,4 +39,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           repository_username: __token__
           repository_password: ${{ secrets.PYPI_API_TOKEN }}
-          additional_options: --prerelease --verbosity=DEBUG --define=branch=${{ env.BRANCH }}
+          additional_options: --noop --verbosity=DEBUG --define=branch=${{ env.BRANCH }}
+        env:
+          REPOSITORY_URL: https://test.pypi.org/legacy/
