--- a/.copier-config.yaml
+++ b/.copier-config.yaml
@@ -1,8 +1,8 @@
 # Changes here will be overwritten by Copier; do NOT edit manually
-_commit: v0.4.14
+_commit: v0.4.19
 _src_path: gh:entelecheia/hyperfast-python-template
 author: Young Joon Lee
-build_and_release: true
+build_and_release: false
 code_template_answers_file: .copier-hyfi-config.yaml
 code_template_source: ''
 copyright_year: 2023
