--- a/.copierignore
+++ b/.copierignore
@@ -1,12 +1,12 @@
 .copierignore
+.gitignore
 .tasks-extra.toml
 CHANGELOG.md
-pyproject.toml
 book/_config.yml
 book/_toc.yml
 book/index.md
 book/references.bib
-.pre-commit-config.yaml
 book/usage.md
 book/examples.md
-README.md
+book/requirements.txt
+.pre-commit-config.yaml
