fix(build): disable build command in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,7 @@ changelog_file = "CHANGELOG.md"
 upload_to_repository = true
 upload_to_release = false
 hvcs = "github" # hosting version control system, gitlab is also supported
+build_command = false
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
