--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,7 @@ changelog_file = "CHANGELOG.md"
 upload_to_repository = true
 upload_to_release = false
 hvcs = "github" # hosting version control system, gitlab is also supported
-build_command = false
+build_command = "echo 'No build command configured'"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
