--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,11 +88,7 @@ prerelease_tag = "rc"
 major_on_zero = true
 tag_commit = true
 changelog_file = "CHANGELOG.md"
-upload_to_repository = true
-upload_to_release = false
+upload_to_repository = false
+upload_to_release = true
 hvcs = "github" # hosting version control system, gitlab is also supported
-build_command = "mkdir -p dist && echo 'No build command configured' > dist/dummy.txt"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+build_command = false
