fix(config): update upload settings and build command

--- a/.copier-config.yaml
+++ b/.copier-config.yaml
@@ -21,8 +21,8 @@ project_description: Lecture notes for artifical intelligence courses taught at 
 project_license: CC-BY-4.0
 project_name: lecture
 project_short_description: Artificial Intelligence | Lecture Notes
-upload_to_release: false
-upload_to_repository: true
+upload_to_release: true
+upload_to_repository: false
 use_launch_buttons: true
 use_source_code_skeleton: false
 
