fix(dependencies): update copier version and change release build command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lecture"
-version = "0.3.7"
+version = "0.0.0"
 description = "Artificial Intelligence | Lecture Notes"
 authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
 license = "CC-BY-4.0"
@@ -91,4 +91,4 @@ changelog_file = "CHANGELOG.md"
 upload_to_repository = false
 upload_to_release = true
 hvcs = "github" # hosting version control system, gitlab is also supported
-build_command = "mkdir -p dist && echo 'No build command configured' > dist/dummy.txt"
+build_command = "mkdir -p dist && echo 'No build command configured' > dist/release.txt"
