fix(config): update .copier-config.yaml and pyproject.toml files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,6 @@ major_on_zero = true
 tag_commit = true
 changelog_file = "CHANGELOG.md"
 upload_to_repository = false
-upload_to_release = true
+upload_to_release = false
 hvcs = "github" # hosting version control system, gitlab is also supported
 build_command = "mkdir -p dist && echo 'No build command configured' > dist/release.txt"
