docs(mlops): add server, vpn tutorial

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -126,8 +126,10 @@ parts:
                 title: GitHub Setup Scripts
               - url: https://dotfiles.entelecheia.ai/usage/ssh-gpg-age/
                 title: SSH, GPG, and Age Setup Scripts
-              - url: https://dotfiles.entelecheia.ai/usage/pass/
+              - url: https://dotfiles.entelecheia.ai/usage/sops/
                 title: Pass and Passage Scripts
+              - url: https://dotfiles.entelecheia.ai/usage/pass/
+                title: "SOPS: Secrets OPerationS"
               - url: https://dotfiles.entelecheia.ai/usage/doppler/
                 title: Doppler Usage
               - url: https://dotfiles.entelecheia.ai/usage/dockerfiles/
