docs(toc): add sections to mlops/simple-pipeline

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -153,6 +153,9 @@ parts:
               - file: lectures/mlops/containerization/docker
               - file: lectures/mlops/containerization/containerd
           - file: lectures/mlops/simple-pipeline/index
+            sections:
+              - file: lectures/mlops/simple-pipeline/server
+              - file: lectures/mlops/simple-pipeline/vpn
       - file: lectures/ds/index
 
   - caption: About
