feat(ds): add fomc

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -157,6 +157,22 @@ parts:
               - file: lectures/mlops/simple-pipeline/server
               - file: lectures/mlops/simple-pipeline/vpn
       - file: lectures/ds/index
+        sections:
+          - file: lectures/ds/fomc/index
+            sections:
+              - file: lectures/ds/fomc/01_numerical_data
+              - file: lectures/ds/fomc/02_textual_data
+              - file: lectures/ds/fomc/03_EDA_numericals1
+              - file: lectures/ds/fomc/03_EDA_numericals2
+              - file: lectures/ds/fomc/04_training_datasets
+              - file: lectures/ds/fomc/05_features
+              - file: lectures/ds/fomc/06_AutoML
+              - file: lectures/ds/fomc/07_predict_sentiments
+              - file: lectures/ds/fomc/08_EDA_sentiments1
+              - file: lectures/ds/fomc/08_EDA_sentiments2
+              - file: lectures/ds/fomc/09_visualize_features
+              - file: lectures/ds/fomc/10_monetary_shocks
+              - file: lectures/ds/fomc/11_AutoML_with_tones
 
   - caption: About
     chapters:
