--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -173,6 +173,16 @@ parts:
               - file: lectures/ds/fomc/09_visualize_features
               - file: lectures/ds/fomc/10_monetary_shocks
               - file: lectures/ds/fomc/11_AutoML_with_tones
+          - file: lectures/ds/esg-ratings/index
+            sections:
+              - file: lectures/ds/esg-ratings/prepare_datasets
+              - file: lectures/ds/esg-ratings/improve_datasets
+              - file: lectures/ds/esg-ratings/train_classifiers
+              - file: lectures/ds/esg-ratings/build_news_corpus
+              - file: lectures/ds/esg-ratings/predict_esg_classes
+              - file: lectures/ds/esg-ratings/cross_validate_datasets
+              - file: lectures/ds/esg-ratings/prepare_datasets_for_labeling
+              - file: lectures/ds/esg-ratings/all_in_one_pipeline
 
   - caption: About
     chapters:
