--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,6 +8,7 @@ on:
     branches:
       - main
     paths:
+      - "book/**"
       - 'src/**'
       - 'pyproject.toml'
       - '.copier-template/**'
