chore(dotfiles): update TOC titles for clarity

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -120,19 +120,19 @@ parts:
               - url: https://dotfiles.entelecheia.ai
                 title: Dotfiles Repository
               - url: https://dotfiles.entelecheia.ai/usage/dotdrop/
-                title: Dotdrop Setup Script
+                title: Dotdrop Setup
               - url: https://dotfiles.entelecheia.ai/usage/github/
-                title: GitHub Setup Scripts
+                title: GitHub Setup
               - url: https://dotfiles.entelecheia.ai/usage/ssh-gpg-age/
-                title: SSH, GPG, and Age Setup Scripts
+                title: SSH, GPG, and Age Setup
               - url: https://dotfiles.entelecheia.ai/usage/sops/
-                title: "SOPS: Secrets OPerationS"
+                title: SOPS Usage
               - url: https://dotfiles.entelecheia.ai/usage/pass/
-                title: Pass and Passage Scripts
+                title: Pass and Passage Usage
               - url: https://dotfiles.entelecheia.ai/usage/doppler/
                 title: Doppler Usage
               - url: https://dotfiles.entelecheia.ai/usage/dockerfiles/
-                title: Dockerfiles Scripts
+                title: Dockerfiles Usage
           - file: lectures/mlops/security/index
             sections:
               - file: lectures/mlops/security/auth-enc-sign
