--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -118,7 +118,7 @@ parts:
           - file: lectures/mlops/dotfiles/index
             sections:
               - url: https://dotfiles.entelecheia.ai
-                title: Dotfiles Repository
+                title: Dotfiles Project <img alt="dotfiles-release" src="https://img.shields.io/github/v/release/entelecheia/dotfiles?sort=semver" />
               - url: https://dotfiles.entelecheia.ai/usage/dotdrop/
                 title: Dotdrop Setup
               - url: https://dotfiles.entelecheia.ai/usage/github/
