chore(vscode): add workspace extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,8 @@
         "ms-vscode.live-server",
         "docsmsft.docs-images",
         "mdickin.markdown-shortcuts",
-        "yzhang.markdown-all-in-one"
+        "yzhang.markdown-all-in-one",
+        "eamodio.gitlens",
+        "lennartlence.chadcommit"
     ]
 }
