--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -61,6 +61,7 @@ parts:
           - file: lectures/nlp_deep/tokenization/index
             sections:
               - file: lectures/nlp_deep/tokenization/subword
+              - file: lectures/nlp_deep/tokenization/pipeline
               - file: lectures/nlp_deep/tokenization/sentencepiece
               - file: lectures/nlp_deep/tokenization/lab-train-tokenizers
           - file: lectures/nlp_deep/training/index
