--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -62,6 +62,7 @@ parts:
             sections:
               - file: lectures/nlp_deep/tokenization/subword
               - file: lectures/nlp_deep/tokenization/pipeline
+              - file: lectures/nlp_deep/tokenization/bpe
               - file: lectures/nlp_deep/tokenization/sentencepiece
               - file: lectures/nlp_deep/tokenization/lab-train-tokenizers
           - file: lectures/nlp_deep/training/index
