refactor(deepnlp): add wordpiece

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -63,6 +63,7 @@ parts:
               - file: lectures/nlp_deep/tokenization/subword
               - file: lectures/nlp_deep/tokenization/pipeline
               - file: lectures/nlp_deep/tokenization/bpe
+              - file: lectures/nlp_deep/tokenization/wordpiece
               - file: lectures/nlp_deep/tokenization/sentencepiece
               - file: lectures/nlp_deep/tokenization/lab-train-tokenizers
           - file: lectures/nlp_deep/training/index
