--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -64,6 +64,7 @@ parts:
               - file: lectures/nlp_deep/tokenization/pipeline
               - file: lectures/nlp_deep/tokenization/bpe
               - file: lectures/nlp_deep/tokenization/wordpiece
+              - file: lectures/nlp_deep/tokenization/unigram
               - file: lectures/nlp_deep/tokenization/sentencepiece
               - file: lectures/nlp_deep/tokenization/lab-train-tokenizers
           - file: lectures/nlp_deep/training/index
