--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -28,6 +28,7 @@ parts:
               - file: lectures/nlp_intro/sentiments/lexicon
               - file: lectures/nlp_intro/sentiments/ml
               - file: lectures/nlp_intro/sentiments/lab-lexicon
+              - file: lectures/nlp_intro/sentiments/lab-ml
           - file: lectures/nlp_intro/tokenization/index
             sections:
               - file: lectures/nlp_intro/tokenization/segmentation
