--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -31,6 +31,9 @@ parts:
               - file: lectures/nlp_intro/sentiments/lab-ml
           - file: lectures/nlp_intro/tokenization/index
             sections:
+              - file: lectures/nlp_intro/tokenization/tokenization
+              - file: lectures/nlp_intro/tokenization/pos
+              # - file: lectures/nlp_intro/tokenization/ngrams
               - file: lectures/nlp_intro/tokenization/segmentation
           - file: lectures/nlp_intro/vectorization/index
           - file: lectures/nlp_intro/embeddings/index
