--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -33,7 +33,7 @@ parts:
             sections:
               - file: lectures/nlp_intro/tokenization/tokenization
               - file: lectures/nlp_intro/tokenization/pos
-              # - file: lectures/nlp_intro/tokenization/ngrams
+              - file: lectures/nlp_intro/tokenization/ngrams
               - file: lectures/nlp_intro/tokenization/segmentation
           - file: lectures/nlp_intro/vectorization/index
           - file: lectures/nlp_intro/embeddings/index
