--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -34,6 +34,7 @@ parts:
               - file: lectures/nlp_intro/tokenization/tokenization
               - file: lectures/nlp_intro/tokenization/pos
               - file: lectures/nlp_intro/tokenization/ngrams
+              - file: lectures/nlp_intro/tokenization/korean
               - file: lectures/nlp_intro/tokenization/segmentation
           - file: lectures/nlp_intro/vectorization/index
           - file: lectures/nlp_intro/embeddings/index
