docs(intro-nlp): update topic lectures

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -20,8 +20,10 @@ parts:
               # - file: lectures/nlp_intro/lab2-corpus-eda
           - file: lectures/nlp_intro/topic/index
             sections:
-              - file: lectures/nlp_intro/topic/coherence.md
-              - file: lectures/nlp_intro/topic/coherence-practice.md
+              - file: lectures/nlp_intro/topic/methods
+              - file: lectures/nlp_intro/topic/practice
+              - file: lectures/nlp_intro/topic/coherence
+              - file: lectures/nlp_intro/topic/coherence-practice
               - file: lectures/nlp_intro/topic/tomotopy
           - file: lectures/nlp_intro/sentiments/index
             sections:
