--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -38,6 +38,7 @@ parts:
               - file: lectures/nlp_intro/tokenization/ngrams
               - file: lectures/nlp_intro/tokenization/korean
               - file: lectures/nlp_intro/tokenization/segmentation
+              - file: lectures/nlp_intro/tokenization/lab-tokenization
           - file: lectures/nlp_intro/vectorization/index
           - file: lectures/nlp_intro/embeddings/index
           # - file: lectures/nlp_intro/lexicons
