docs(intro-nlp): add lab-korean

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -39,6 +39,7 @@ parts:
               - file: lectures/nlp_intro/tokenization/korean
               - file: lectures/nlp_intro/tokenization/segmentation
               - file: lectures/nlp_intro/tokenization/lab-tokenization
+              - file: lectures/nlp_intro/tokenization/lab-korean
           - file: lectures/nlp_intro/vectorization/index
           - file: lectures/nlp_intro/embeddings/index
           # - file: lectures/nlp_intro/lexicons
