chore(nlp_intro): Rename files and directories to fix typos and improve organization

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -41,6 +41,8 @@ parts:
               - file: lectures/nlp_intro/tokenization/lab-tokenization
               - file: lectures/nlp_intro/tokenization/lab-korean
           - file: lectures/nlp_intro/vectorization/index
+            sections:
+              - file: lectures/nlp_intro/vectorization/semantics
           - file: lectures/nlp_intro/embeddings/index
           # - file: lectures/nlp_intro/lexicons
           # - file: lectures/nlp_intro/doc2vec
