docs(intro-nlp): add bow

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -43,6 +43,7 @@ parts:
           - file: lectures/nlp_intro/vectorization/index
             sections:
               - file: lectures/nlp_intro/vectorization/semantics
+              - file: lectures/nlp_intro/vectorization/bow
           - file: lectures/nlp_intro/embeddings/index
           # - file: lectures/nlp_intro/lexicons
           # - file: lectures/nlp_intro/doc2vec
