--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -44,6 +44,7 @@ parts:
             sections:
               - file: lectures/nlp_intro/vectorization/semantics
               - file: lectures/nlp_intro/vectorization/bow
+              - file: lectures/nlp_intro/vectorization/tf-idf
           - file: lectures/nlp_intro/embeddings/index
           # - file: lectures/nlp_intro/lexicons
           # - file: lectures/nlp_intro/doc2vec
