--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -46,6 +46,7 @@ parts:
               - file: lectures/nlp_intro/vectorization/bow
               - file: lectures/nlp_intro/vectorization/tf-idf
               - file: lectures/nlp_intro/vectorization/similarity
+              - file: lectures/nlp_intro/vectorization/lab-similarity
           - file: lectures/nlp_intro/embeddings/index
           # - file: lectures/nlp_intro/lexicons
           # - file: lectures/nlp_intro/doc2vec
