docs(intro-nlp): add embeddings lectures

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -48,6 +48,11 @@ parts:
               - file: lectures/nlp_intro/vectorization/similarity
               - file: lectures/nlp_intro/vectorization/lab-similarity
           - file: lectures/nlp_intro/embeddings/index
+            sections:
+              - file: lectures/nlp_intro/embeddings/nlm
+              - file: lectures/nlp_intro/embeddings/w2v
+              - file: lectures/nlp_intro/embeddings/glove
+              - file: lectures/nlp_intro/embeddings/fasttext
           # - file: lectures/nlp_intro/lexicons
           # - file: lectures/nlp_intro/doc2vec
           # - file: lectures/nlp_intro/text_segmentation
