docs(intro-nlp): update research applications lecture

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -11,6 +11,9 @@ parts:
         sections:
           - file: lectures/nlp_intro/intro/index
           - file: lectures/nlp_intro/research/index
+            sections:
+              - file: lectures/nlp_intro/research/apps1
+              - file: lectures/nlp_intro/research/apps2
           - file: lectures/nlp_intro/lm/index
           - file: lectures/nlp_intro/datasets/index
             sections:
