docs(intro-nlp): update language model lecture

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -15,6 +15,9 @@ parts:
               - file: lectures/nlp_intro/research/apps1
               - file: lectures/nlp_intro/research/apps2
           - file: lectures/nlp_intro/lm/index
+            sections:
+              - file: lectures/nlp_intro/lm/ngram
+              - file: lectures/nlp_intro/lm/usage
           - file: lectures/nlp_intro/datasets/index
             sections:
               - file: lectures/nlp_intro/datasets/corpus
