--- a/.tasks.toml
+++ b/.tasks.toml
@@ -110,7 +110,7 @@ help = "show remotes"
 cmd = "git show-ref"
 help = "show refs"
 
-[tool.poe.tasks.branch-chekcout-upstream]
+[tool.poe.tasks.branch-checkout-upstream]
 sequence = [
     { cmd = "git checkout -B ${branch}" },
     { cmd = "git push --set-upstream origin ${branch}" },
@@ -118,7 +118,7 @@ sequence = [
 help = "create a new branch and push it to origin"
 args = ["branch"]
 
-[tool.poe.tasks.branch-chekcout]
+[tool.poe.tasks.branch-checkout]
 cmd = "git checkout ${branch}"
 help = "checkout a branch"
 args = ["branch"]
@@ -165,3 +165,39 @@ help = "update dependencies"
 [tool.poe.tasks.lock]
 cmd = "poetry lock"
 help = "lock dependencies"
+
+[tool.poe.tasks.git-lfs-install]
+cmd = "git lfs install"
+help = "git lfs install"
+
+[tool.poe.tasks.git-lfs-track]
+cmd = "git lfs track ${patterns}"
+help = "git lfs track"
+args = [
+  { name = "patterns", default = "*.pdf" },
+]
+
+[tool.poe.tasks.git-lfs-migrate]
+cmd = "git lfs migrate import --everything --include=${patterns}"
+help = "git lfs migrate"
+args = [
+  { name = "patterns", default = "*.pdf" },
+]
+
+[tool.poe.tasks.git-add-submodule]
+cmd = "git submodule add ${url} ${path}"
+help = "git submodule add ${url} ${path}"
+args = [
+  { name = "url" },
+  { name = "path" },
+]
+
+[tool.poe.tasks.git-init-submodule]
+cmd = "git submodule update --init --recursive"
+help = "git submodule update --init --recursive"
+
+[tool.poe.tasks.git-update-submodule]
+cmd = "git submodule update --recursive --remote"
+help = "git submodule update --recursive --remote"
+
+
