--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
+ipykernel = "^6.23.1"
 
 [tool.poetry.group.dev]
 optional = true
