feat(course): add two new labs to NLP_deep training section

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -95,7 +95,9 @@ parts:
               - file: lectures/nlp_deep/tokenization/lab-train-tokenizers
           - file: lectures/nlp_deep/training/index
             sections:
-              - file: lectures/nlp_deep/training/lab-pretraining
+              - file: lectures/nlp_deep/training/lab-pretrain-mlm
+              - file: lectures/nlp_deep/training/lab-finetune-mlm
+              # - file: lectures/nlp_deep/training/lab-pretraining
           - file: lectures/nlp_deep/chatbots/index
             sections:
               - file: lectures/nlp_deep/chatbots/rlhf
