--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -96,6 +96,7 @@ parts:
           - file: lectures/nlp_deep/training/index
             sections:
               - file: lectures/nlp_deep/training/lab-pretrain-mlm
+              - file: lectures/nlp_deep/training/lab-pretrain-clm
               - file: lectures/nlp_deep/training/lab-finetune-mlm
               # - file: lectures/nlp_deep/training/lab-pretraining
           - file: lectures/nlp_deep/chatbots/index
