--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -189,6 +189,7 @@ parts:
             sections:
               - file: lectures/mlops/simple-pipeline/server
               - file: lectures/mlops/simple-pipeline/vpn
+          - file: lectures/mlops/llmops/index
       - file: lectures/ds/index
         sections:
           - file: lectures/ds/fomc/index
