docs: update book/TOC.yml with LLMOPS/BentoML section

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -190,6 +190,8 @@ parts:
               - file: lectures/mlops/simple-pipeline/server
               - file: lectures/mlops/simple-pipeline/vpn
           - file: lectures/mlops/llmops/index
+            sections:
+              - file: lectures/mlops/llmops/bentoml
       - file: lectures/ds/index
         sections:
           - file: lectures/ds/fomc/index
