feat(mlops): add new section on Bentochain in MLOps lecture

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -192,6 +192,7 @@ parts:
           - file: lectures/mlops/llmops/index
             sections:
               - file: lectures/mlops/llmops/bentoml
+              - file: lectures/mlops/llmops/bentochain
       - file: lectures/ds/index
         sections:
           - file: lectures/ds/fomc/index
