--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
 ipykernel = "^6.23.1"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev]
 optional = true
