build(pyproject.toml): add new dependencies cryptography and certifi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ mypy = "^1.0.0"
 flake8-pyproject = "^1.2.2"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
+cryptography = "^41.0.3"
+certifi = "^2023.7.22"
 
 [tool.poe]
 include = [".tasks.toml", ".tasks-extra.toml"]
