feat(book): add llms lecture index

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -109,6 +109,9 @@ parts:
           # - file: lectures/nlp_deep/enc-dec
           # - file: lectures/nlp_deep/ekorpkit
           # - file: lectures/nlp_deep/lab2-corpus-eda
+
+      - file: lectures/llms/index
+
       - file: lectures/nlp_advances/index
         sections:
           - file: lectures/nlp_advances/thesis
