feat(book): add llms intro and bentochain sections

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -111,6 +111,8 @@ parts:
           # - file: lectures/nlp_deep/lab2-corpus-eda
 
       - file: lectures/llms/index
+        sections:
+          - file: lectures/llms/intro/index
 
       - file: lectures/nlp_advances/index
         sections:
@@ -196,6 +198,7 @@ parts:
             sections:
               - file: lectures/mlops/llmops/bentoml
               - file: lectures/mlops/llmops/bentochain
+
       - file: lectures/dsecon/index
         sections:
           - file: lectures/dsecon/fomc/index
