feat(lectures): add Introduction to Software Engineering content

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -227,6 +227,8 @@ parts:
               - file: lectures/dsecon/esg-ratings/prepare_datasets_for_labeling
               - file: lectures/dsecon/esg-ratings/all_in_one_pipeline
       - file: lectures/softeng/index
+        sections:
+          - file: lectures/softeng/intro/index
 
   - caption: About
     chapters:
