feat(lectures): add Software Processes content to softeng/intro

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -229,6 +229,8 @@ parts:
       - file: lectures/softeng/index
         sections:
           - file: lectures/softeng/intro/index
+            sections:
+              - file: lectures/softeng/intro/processes
 
   - caption: About
     chapters:
