feat(book): add SDLC lecture notes

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -231,6 +231,7 @@ parts:
           - file: lectures/softeng/intro/index
             sections:
               - file: lectures/softeng/intro/processes
+              - file: lectures/softeng/intro/sdlc
 
   - caption: About
     chapters:
