--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -232,6 +232,7 @@ parts:
             sections:
               - file: lectures/softeng/intro/processes
               - file: lectures/softeng/intro/sdlc
+              - file: lectures/softeng/intro/requirements
 
   - caption: About
     chapters:
