--- a/.tasks.toml
+++ b/.tasks.toml
@@ -133,8 +133,7 @@ help = "install ghp-import"
 
 [tool.poe.tasks.install-jupyter-book]
 shell = """
-  pipx install jupyter-book
-  args=(); while IFS= read -r file; do args+=("$file"); done < book/requirements.txt; pipx inject jupyter-book "${args[@]:1}"
+  pip install -r book/requirements.txt
 """
 help = "install jupyter-book"
 
