--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -201,6 +201,7 @@ parts:
 
       - file: lectures/dsecon/index
         sections:
+          - file: lectures/dsecon/intro/index
           - file: lectures/dsecon/fomc/index
             sections:
               - file: lectures/dsecon/fomc/01_numerical_data
