feat(lectures): add new content about technical challenges in data science

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -202,6 +202,8 @@ parts:
       - file: lectures/dsecon/index
         sections:
           - file: lectures/dsecon/intro/index
+            sections:
+              - file: lectures/dsecon/intro/challenges
           - file: lectures/dsecon/fomc/index
             sections:
               - file: lectures/dsecon/fomc/01_numerical_data
