feat(lectures): add Data Analytics Methods in economics and finance content

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -204,6 +204,7 @@ parts:
           - file: lectures/dsecon/intro/index
             sections:
               - file: lectures/dsecon/intro/challenges
+              - file: lectures/dsecon/intro/methods
           - file: lectures/dsecon/fomc/index
             sections:
               - file: lectures/dsecon/fomc/01_numerical_data
