feat(book): add sphinx-contrib-slide dependency

--- a/book/requirements.txt
+++ b/book/requirements.txt
@@ -9,3 +9,5 @@ sphinxcontrib-video
 sphinx-thebe
 sphinxcontrib-mermaid
 sphinx-carousel
+# sphinxcontrib-slide
+git+https://github.com/TYPO3-Documentation/sphinx-contrib-slide.git
