--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ homepage = "https://lecture.entelecheia.ai"
 repository = "https://github.com/entelecheia/lecture"
 readme = "README.md"
 
-
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12"
 ipykernel = "^6.24.0"
@@ -30,23 +29,59 @@ cryptography = "^41.0.3"
 certifi = "^2023.7.22"
 
 [tool.poe]
-include = [".tasks.toml"]
+include = [".tasks.toml", ".tasks-extra.toml"]
 
 [tool.black]
-exclude = ['_version.py', 'node_modules', '_build', 'docs', 'tests', 'venv', '.copier-template', '.refs']
+exclude = [
+    '_version.py',
+    'node_modules',
+    '_build',
+    'docs',
+    'tests',
+    'venv',
+    '.copier-template',
+    '.refs',
+]
 
 [tool.isort]
 profile = "black"
-skip = ['_version.py', 'node_modules', '_build', 'docs', 'tests', 'venv', '.copier-template', '.refs']
+skip = [
+    '_version.py',
+    'node_modules',
+    '_build',
+    'docs',
+    'tests',
+    'venv',
+    '.copier-template',
+    '.refs',
+]
 
 [tool.flake8]
 ignore = ['F401', 'E501', 'W503']
-exclude = ["node_modules", "_build", "docs", "tests", "venv", ".copier-template", ".refs"]
+exclude = [
+    "node_modules",
+    "_build",
+    "docs",
+    "tests",
+    "venv",
+    ".copier-template",
+    ".refs",
+]
 per-file-ignores = ['__init__.py:F401', '_version.py:W292']
 
 [tool.mypy]
 namespace_packages = true
-exclude = ["node_modules", "build", "_build", "dist", "docs", "tests", "venv", ".copier-template", ".refs"]
+exclude = [
+    "node_modules",
+    "build",
+    "_build",
+    "dist",
+    "docs",
+    "tests",
+    "venv",
+    ".copier-template",
+    ".refs",
+]
 # 3rd party import
 ignore_missing_imports = true
 # dynamic typing
@@ -86,7 +121,7 @@ tag_format = "v$version"
 branch = "main"
 version_toml = "pyproject.toml:tool.poetry.version"
 version_source = "tag"
-commit_version_number = true # required for version_source = "tag"
+commit_version_number = true                                                             # required for version_source = "tag"
 commit_subject = "chore(release): :rocket: {version} [skip ci]"
 prerelease_tag = "rc"
 major_on_zero = true
@@ -94,5 +129,5 @@ tag_commit = true
 changelog_file = "CHANGELOG.md"
 upload_to_repository = false
 upload_to_release = false
-hvcs = "github" # hosting version control system, gitlab is also supported
+hvcs = "github"                                                                          # hosting version control system, gitlab is also supported
 build_command = "mkdir -p dist && echo 'No build command configured' > dist/release.txt"
