--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -234,6 +234,7 @@ parts:
         sections:
           - file: lectures/softeng/intro/index
             sections:
+              - file: lectures/softeng/intro/introduction
               - file: lectures/softeng/intro/processes
               - file: lectures/softeng/intro/sdlc
               - file: lectures/softeng/intro/requirements
