feat(book/config): add sphinxcontrib.slide to sphinx config

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -135,6 +135,7 @@ sphinx:
     - sphinxcontrib.mermaid
     - sphinx_thebe
     - sphinx_carousel.carousel
+    - sphinxcontrib.slide
 
 launch_buttons:
   colab_url: "https://colab.research.google.com"
