feat(book): add introduction section to the lecture content

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -203,6 +203,7 @@ parts:
         sections:
           - file: lectures/dsecon/intro/index
             sections:
+              - file: lectures/dsecon/intro/introduction
               - file: lectures/dsecon/intro/challenges
               - file: lectures/dsecon/intro/methods
           - file: lectures/dsecon/fomc/index
