feat(book): add new section in llms intro

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -113,6 +113,8 @@ parts:
       - file: lectures/llms/index
         sections:
           - file: lectures/llms/intro/index
+            sections:
+              - file: lectures/llms/intro/llms
 
       - file: lectures/nlp_advances/index
         sections:
