refactor(book): rearrange lecture sections in toc

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -104,12 +104,6 @@ parts:
               - file: lectures/nlp_deep/chatbots/rlhf
               - file: lectures/nlp_deep/chatbots/detectGPT
 
-      - file: lectures/llms/index
-        sections:
-          - file: lectures/llms/intro/index
-            sections:
-              - file: lectures/llms/intro/llms
-
       - file: lectures/nlp_advances/index
         sections:
           - file: lectures/nlp_advances/thesis
@@ -141,6 +135,8 @@ parts:
           #     - file: lectures/aiart/music/image2music
           - file: lectures/aiart/motion-capture-and-synthesis/index
           - file: lectures/aiart/robot/index
+
+      # Machine Learning Systems Design
       - file: lectures/mlops/index
         sections:
           - file: lectures/mlops/intro
@@ -195,6 +191,7 @@ parts:
               - file: lectures/mlops/llmops/bentoml
               - file: lectures/mlops/llmops/bentochain
 
+      # Data Science in Economics and Finance
       - file: lectures/dsecon/index
         sections:
           - file: lectures/dsecon/intro/index
@@ -227,6 +224,8 @@ parts:
               - file: lectures/dsecon/esg-ratings/cross_validate_datasets
               - file: lectures/dsecon/esg-ratings/prepare_datasets_for_labeling
               - file: lectures/dsecon/esg-ratings/all_in_one_pipeline
+
+      # Software Engineering
       - file: lectures/softeng/index
         sections:
           - file: lectures/softeng/intro/index
@@ -235,6 +234,13 @@ parts:
               - file: lectures/softeng/intro/processes
               - file: lectures/softeng/intro/sdlc
               - file: lectures/softeng/intro/requirements
+
+      # Large Language Models
+      - file: lectures/llms/index
+        sections:
+          - file: lectures/llms/intro/index
+            sections:
+              - file: lectures/llms/intro/llms
 
   - caption: About
     chapters:
