feat(book): add new sections to software engineering proposal

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -234,6 +234,11 @@ parts:
               - file: lectures/softeng/intro/processes
               - file: lectures/softeng/intro/sdlc
               - file: lectures/softeng/intro/requirements
+          - file: lectures/softeng/proposal/index
+            sections:
+              - file: lectures/softeng/proposal/steps
+              - file: lectures/softeng/proposal/guidelines
+              - file: lectures/softeng/proposal/template
 
       # Large Language Models
       - file: lectures/llms/index
