docs(book): add stack lectures to table of contents

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -246,6 +246,11 @@ parts:
           - file: lectures/llms/intro/index
             sections:
               - file: lectures/llms/intro/llms
+          - file: lectures/llms/stack/index
+            sections:
+              - file: lectures/llms/stack/infra
+              - file: lectures/llms/stack/architecture
+              - file: lectures/llms/stack/appapp
 
   - caption: About
     chapters:
