refactor(book): correct filename in table of contents

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -250,7 +250,7 @@ parts:
             sections:
               - file: lectures/llms/stack/infra
               - file: lectures/llms/stack/architecture
-              - file: lectures/llms/stack/appapp
+              - file: lectures/llms/stack/app
 
   - caption: About
     chapters:
