feat(book): add new section in dcon/cb with altdata

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -199,6 +199,9 @@ parts:
               - file: lectures/dsecon/intro/introduction
               - file: lectures/dsecon/intro/challenges
               - file: lectures/dsecon/intro/methods
+          - file: lectures/dsecon/cb/index
+            sections:
+              - file: lectures/dsecon/cb/altdata
           - file: lectures/dsecon/fomc/index
             sections:
               - file: lectures/dsecon/fomc/01_numerical_data
