feat(book): add vcs section to softeng lectures

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -242,6 +242,7 @@ parts:
               - file: lectures/softeng/proposal/steps
               - file: lectures/softeng/proposal/guidelines
               - file: lectures/softeng/proposal/template
+          - file: lectures/softeng/vcs/index
 
       # Large Language Models
       - file: lectures/llms/index
