--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -243,6 +243,20 @@ parts:
               - file: lectures/softeng/proposal/guidelines
               - file: lectures/softeng/proposal/template
           - file: lectures/softeng/vcs/index
+            sections:
+              - file: lectures/softeng/vcs/00_introduction.ipynb
+              # - file: lectures/softeng/vcs/01_solo_work_with_git.ipynb
+              # - file: lectures/softeng/vcs/02_fixing_mistakes.ipynb
+              # - file: lectures/softeng/vcs/03_publishing.ipynb
+              # - file: lectures/softeng/vcs/04_collaboration.ipynb
+              # - file: lectures/softeng/vcs/05_fork_and_pull.ipynb
+              # - file: lectures/softeng/vcs/06_git_theory.ipynb
+              # - file: lectures/softeng/vcs/07_branches.ipynb
+              # - file: lectures/softeng/vcs/08_advanced_git_concepts.ipynb
+              # - file: lectures/softeng/vcs/09_github_pages.ipynb
+              # - file: lectures/softeng/vcs/10_rebasing.ipynb
+              # - file: lectures/softeng/vcs/11_debugging_with_git_bisect.ipynb
+              # - file: lectures/softeng/vcs/12_multiple_remotes.ipynb
 
       # Large Language Models
       - file: lectures/llms/index
