--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 python = ">=3.8.1,<3.12"
 ipykernel = "^6.25.2"
 requests = "^2.31.0"
+matplotlib = "<=3.8"
 
 [tool.poetry.group.dev]
 optional = true
