--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -245,7 +245,7 @@ parts:
           - file: lectures/softeng/vcs/index
             sections:
               - file: lectures/softeng/vcs/00_introduction.ipynb
-              # - file: lectures/softeng/vcs/01_solo_work_with_git.ipynb
+              - file: lectures/softeng/vcs/01_solo_work_with_git.ipynb
               # - file: lectures/softeng/vcs/02_fixing_mistakes.ipynb
               # - file: lectures/softeng/vcs/03_publishing.ipynb
               # - file: lectures/softeng/vcs/04_collaboration.ipynb
