--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -246,7 +246,7 @@ parts:
             sections:
               - file: lectures/softeng/vcs/00_introduction.ipynb
               - file: lectures/softeng/vcs/01_solo_work_with_git.ipynb
-              # - file: lectures/softeng/vcs/02_fixing_mistakes.ipynb
+              - file: lectures/softeng/vcs/02_fixing_mistakes.ipynb
               # - file: lectures/softeng/vcs/03_publishing.ipynb
               # - file: lectures/softeng/vcs/04_collaboration.ipynb
               # - file: lectures/softeng/vcs/05_fork_and_pull.ipynb
