--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -247,7 +247,7 @@ parts:
               - file: lectures/softeng/vcs/00_introduction.ipynb
               - file: lectures/softeng/vcs/01_solo_work_with_git.ipynb
               - file: lectures/softeng/vcs/02_fixing_mistakes.ipynb
-              # - file: lectures/softeng/vcs/03_publishing.ipynb
+              - file: lectures/softeng/vcs/03_publishing.ipynb
               # - file: lectures/softeng/vcs/04_collaboration.ipynb
               # - file: lectures/softeng/vcs/05_fork_and_pull.ipynb
               # - file: lectures/softeng/vcs/06_git_theory.ipynb
