--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -251,7 +251,7 @@ parts:
               - file: lectures/softeng/vcs/04_collaboration.ipynb
               - file: lectures/softeng/vcs/05_fork_and_pull.ipynb
               - file: lectures/softeng/vcs/06_git_theory.ipynb
-              # - file: lectures/softeng/vcs/07_branches.ipynb
+              - file: lectures/softeng/vcs/07_branches.ipynb
               # - file: lectures/softeng/vcs/08_advanced_git_concepts.ipynb
               # - file: lectures/softeng/vcs/09_github_pages.ipynb
               # - file: lectures/softeng/vcs/10_rebasing.ipynb
