--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -253,7 +253,7 @@ parts:
               - file: lectures/softeng/vcs/06_git_theory.ipynb
               - file: lectures/softeng/vcs/07_branches.ipynb
               - file: lectures/softeng/vcs/08_advanced_git_concepts.ipynb
-              # - file: lectures/softeng/vcs/09_github_pages.ipynb
+              - file: lectures/softeng/vcs/09_github_pages.ipynb
               # - file: lectures/softeng/vcs/10_rebasing.ipynb
               # - file: lectures/softeng/vcs/11_debugging_with_git_bisect.ipynb
               # - file: lectures/softeng/vcs/12_multiple_remotes.ipynb
