feat(lectures/softeng/vcs): add debugging with git bisect lecture

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -255,7 +255,7 @@ parts:
               - file: lectures/softeng/vcs/08_advanced_git_concepts.ipynb
               - file: lectures/softeng/vcs/09_github_pages.ipynb
               - file: lectures/softeng/vcs/10_rebasing.ipynb
-              # - file: lectures/softeng/vcs/11_debugging_with_git_bisect.ipynb
+              - file: lectures/softeng/vcs/11_debugging_with_git_bisect.ipynb
               # - file: lectures/softeng/vcs/12_multiple_remotes.ipynb
 
       # Large Language Models
