--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -256,7 +256,7 @@ parts:
               - file: lectures/softeng/vcs/09_github_pages.ipynb
               - file: lectures/softeng/vcs/10_rebasing.ipynb
               - file: lectures/softeng/vcs/11_debugging_with_git_bisect.ipynb
-              # - file: lectures/softeng/vcs/12_multiple_remotes.ipynb
+              - file: lectures/softeng/vcs/12_multiple_remotes.ipynb
 
       # Large Language Models
       - file: lectures/llms/index
