refactor(book): move agents index to llms directory

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -269,7 +269,7 @@ parts:
               - file: lectures/llms/stack/infra
               - file: lectures/llms/stack/architecture
               - file: lectures/llms/stack/app
-          - file: lectures/agents/index
+          - file: lectures/llms/agents/index
             sections:
               - file: lectures/llms/agents/autogen
 
