chore(book): add autoscraper section in llms agents chapter

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -272,6 +272,7 @@ parts:
           - file: lectures/llms/agents/index
             sections:
               - file: lectures/llms/agents/autogen
+              - file: lectures/llms/agents/autoscraper
 
   - caption: About
     chapters:
