--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -257,6 +257,7 @@ parts:
               - file: lectures/softeng/vcs/10_rebasing.ipynb
               - file: lectures/softeng/vcs/11_debugging_with_git_bisect.ipynb
               - file: lectures/softeng/vcs/12_multiple_remotes.ipynb
+          - file: lectures/softeng/spm/index
 
       # Large Language Models
       - file: lectures/llms/index
