feat(book): add new finetune section in llms lectures

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -274,6 +274,9 @@ parts:
             sections:
               - file: lectures/llms/agents/autogen
               - file: lectures/llms/agents/autoscraper
+          - file: lectures/llms/finetune/index
+            sections:
+              - file: lectures/llms/finetune/autotrain
 
   - caption: About
     chapters:
