feat(book): add agile section to software project management

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -258,6 +258,8 @@ parts:
               - file: lectures/softeng/vcs/11_debugging_with_git_bisect.ipynb
               - file: lectures/softeng/vcs/12_multiple_remotes.ipynb
           - file: lectures/softeng/spm/index
+            sections:
+              - file: lectures/softeng/spm/agile
 
       # Large Language Models
       - file: lectures/llms/index
