feat(book): add rag lecture to table of contents

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -279,6 +279,7 @@ parts:
           - file: lectures/llms/finetune/index
             sections:
               - file: lectures/llms/finetune/autotrain
+          - file: lectures/llms/rag/index
 
   - caption: About
     chapters:
