feat(book): add gitops and devsecops sections to devops chapter

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -260,6 +260,10 @@ parts:
           - file: lectures/softeng/spm/index
             sections:
               - file: lectures/softeng/spm/agile
+          - file: lectures/softeng/devops/index
+            sections:
+              - file: lectures/softeng/devops/gitops
+              - file: lectures/softeng/devops/devsecops
 
       # Large Language Models
       - file: lectures/llms/index
