feat(book): add new section in index

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -283,6 +283,7 @@ parts:
             sections:
               - file: lectures/llms/finetune/autotrain
           - file: lectures/llms/rag/index
+          - file: lectures/llms/peft/index
 
   - caption: About
     chapters:
