feat(book): add q-learning lecture to table of contents

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -284,6 +284,7 @@ parts:
               - file: lectures/llms/finetune/autotrain
           - file: lectures/llms/rag/index
           - file: lectures/llms/peft/index
+          - file: lectures/llms/q-learning/index
 
   - caption: About
     chapters:
