--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -284,6 +284,8 @@ parts:
               - file: lectures/llms/finetune/autotrain
           - file: lectures/llms/rag/index
           - file: lectures/llms/peft/index
+            sections:
+              - file: lectures/llms/peft/peft-llms
           - file: lectures/llms/q-learning/index
 
   - caption: About
