--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -286,6 +286,7 @@ parts:
           - file: lectures/llms/peft/index
             sections:
               - file: lectures/llms/peft/peft-llms
+              - file: lectures/llms/peft/peft-hf
           - file: lectures/llms/q-learning/index
 
   - caption: About
