chore(book): add qstar section to q-learning in llms

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -288,6 +288,8 @@ parts:
               - file: lectures/llms/peft/peft-llms
               - file: lectures/llms/peft/peft-hf
           - file: lectures/llms/q-learning/index
+            sections:
+              - file: lectures/llms/q-learning/qstar
 
   - caption: About
     chapters:
