--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,23 +26,26 @@ mypy = "^1.0.0"
 flake8-pyproject = "^1.2.2"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
-cryptography = "^41.0.4"
-certifi = "^2023.7.22"
+cryptography = "^42.0.4"
 
 [tool.poe]
 include = [".tasks.toml", ".tasks-extra.toml"]
 
 [tool.black]
-exclude = [
-    '_version.py',
-    'node_modules',
-    '_build',
-    'docs',
-    'tests',
-    'venv',
-    '.copier-template',
-    '.refs',
-]
+# 'extend-exclude' excludes files or directories in addition to the defaults
+extend-exclude = '''
+# A regex preceded with ^/ will apply only to files and directories
+# in the root of the project.
+(
+  _version.py
+  | .refs
+  | tests
+  | docs
+  | book
+  | _build
+  | node_modules
+)
+'''
 
 [tool.isort]
 profile = "black"
