chore(book): update caption for Courses in _toc.yml

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -4,7 +4,7 @@
 format: jb-book
 root: index
 parts:
-  - caption: Course
+  - caption: Courses
     maxdepth: 4
     chapters:
       - file: lectures/nlp_intro/index
