--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,11 @@ repository = "https://github.com/entelecheia/lecture"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.13"
+python = ">=3.9,<3.13"
 ipykernel = "^6.29.4"
 requests = "^2.31.0"
 matplotlib = "<=3.8"
+numpy = "^2.0.0"
 
 [tool.poetry.group.dev]
 optional = true
@@ -27,7 +28,6 @@ flake8-pyproject = "^1.2.2"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
 cryptography = "^42.0.4"
-docutils = ">=0.20"
 
 [tool.poe]
 include = [".tasks.toml", ".tasks-extra.toml"]
