fix(documentation): update URLs to jeju.ai

--- a/.copier-config.yaml
+++ b/.copier-config.yaml
@@ -7,7 +7,7 @@ code_template_answers_file: .copier-hyfi-config.yaml
 code_template_source: ''
 copyright_year: 2023
 documentaion_tool: jupyter-book
-documentation_url: https://lecture.entelecheia.ai
+documentation_url: https://lecture.jeju.ai
 email: entelecheia@hotmail.com
 favicon_path: https://assets.entelecheia.ai/favicon.png
 friendly_name: ἐντελέχεια.άι
