--- a/book/_config.yml
+++ b/book/_config.yml
@@ -61,7 +61,7 @@ repository:
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
   favicon: https://assets.entelecheia.ai/favicon.png
-  baseurl: https://lecture.entelecheia.ai/
+  baseurl: https://lecture.jeju.ai/
   use_issues_button: false
   use_repository_button: false
   google_analytics_id: G-BQJE5V9RK2
