--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -298,7 +298,7 @@ parts:
         title: entelecheia.me
       - url: https://course.entelecheia.ai
         title: course.entelecheia.ai
-      - url: https://research.entelecheia.ai
-        title: research.entelecheia.ai
+      - url: https://research.jeju.ai
+        title: research.jeju.ai
       - file: about/index
       # - file: about/execution
