--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.30.0"
 description = "Artificial Intelligence | Lecture Notes"
 authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
 license = "CC-BY-4.0"
-homepage = "https://lecture.entelecheia.ai"
+homepage = "https://lecture.jeju.ai"
 repository = "https://github.com/entelecheia/lecture"
 readme = "README.md"
 
