refactor: Refactor project setup and dependencies
- Updated the virtual environment path in `.envrc` to use a local `.venv` directory.
- Replaced the command for creating a virtual environment from `python3 -m venv` to `uv venv`.
- Removed `.tasks.toml` and `.tasks-extra.toml` files, consolidating task definitions into the `Makefile`.
- Updated `pyproject.toml` to use the new project structure and added optional dependencies for development.
- Introduced `uv.lock` for dependency management, replacing the previous `poetry.lock`.

This commit streamlines the project setup and enhances dependency management.

--- a/.envrc
+++ b/.envrc
@@ -3,13 +3,12 @@ export PYTHON_KEYRING_BACKEND="keyring.backends.null.Keyring"
 export PROJECT_NAME="lecture"
 PROJECT_ROOT="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 export PROJECT_ROOT
-VIRTUAL_ENV="${WORKON_HOME}/${PROJECT_NAME}"
+VIRTUAL_ENV="${PROJECT_ROOT}/.venv"
 if [ -e "${VIRTUAL_ENV}/bin/activate" ]; then
     # shellcheck disable=SC1091
     source "${VIRTUAL_ENV}/bin/activate"
 else
-    python3 -m venv "${VIRTUAL_ENV}"
+    uv venv "${VIRTUAL_ENV}"
     # shellcheck disable=SC1091
     source "${VIRTUAL_ENV}/bin/activate"
-    pip install --upgrade pip setuptools wheel
 fi
