fix: Update URLs to use the correct domain for lectures
- Changed documentation URLs from `lecture.jeju.ai` to `lectures.jeju.ai` across multiple files including `.copier-config.yaml`, `pyproject.toml`, `README.md`, and others.
- Updated author and course links in the book configuration and index files to reflect the new domain.
- Ensured all references to the old domain are replaced for consistency and accuracy.

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -6,7 +6,7 @@
 #######################################################################################
 # Book settings
 title: "ἐντελέχεια.άι" # The title of the book. Will be placed in the left navbar.
-author: <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
+author: <a href="https://youngjoon-lee.com" target="_blank">Young Joon Lee</a>
 copyright: "2023"
 # Patterns to skip when building the book. Can be glob-style (e.g. "*skip.ipynb")
 exclude_patterns:
@@ -61,7 +61,7 @@ repository:
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
   favicon: https://assets.entelecheia.ai/favicon.png
-  baseurl: https://lecture.jeju.ai/
+  baseurl: https://lectures.jeju.ai/
   use_issues_button: false
   use_repository_button: false
   google_analytics_id: G-BQJE5V9RK2
