--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -293,11 +293,10 @@ parts:
 
   - caption: About
     chapters:
-      - file: about/lecture-bot.md
-      - url: https://entelecheia.me
-        title: entelecheia.me
-      - url: https://course.entelecheia.ai
-        title: course.entelecheia.ai
+      - url: https://youngjoon-lee.com
+        title: youngjoon-lee.com
+      - url: https://courses.jeju.ai
+        title: courses.jeju.ai
       - url: https://research.jeju.ai
         title: research.jeju.ai
       - file: about/index
