--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://lecture.jeju.ai"
+Homepage = "https://lectures.jeju.ai"
 Repository = "https://github.com/entelecheia/lecture"
 
 [tool.black]
